--- a/dev/web/src/sass/object/project/top/_style.scss
+++ b/dev/web/src/sass/object/project/top/_style.scss
@@ -1,85 +1,162 @@
 body {
 	@include font_family;
 	color: #333333;
-}
-.p-sectionTitle {
-	font-size: 30px;
-	font-weight: 200;
-	letter-spacing: 1.4px;
+	-webkit-font-smoothing: antialiased;
 }
 
-.p-topMain {
-	width: 1100px;
-	margin: 0 auto;
-	padding: 150px 0 100px;
-
-	header {
-		> h1 {
-			text-align: center;
+.p-header {
+	position: relative;
+	padding-top: 150px;
+	@include mq {
+		padding-top: 300px;
+	}
+	> h1 {
+		text-align: center;
+		font-size: 30px;
+		letter-spacing: 0.1em;
+		font-weight: 700;
+		@include mq {
 			font-size: 40px;
-			font-weight: 200;
 			letter-spacing: 0.2em;
+		}
+	}
+
+	&:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 105px;
+		background-color: #e37222;
+		transform: rotate(-20deg);
+		transform-origin: left bottom;
+		@include mq {
+			height: 270px;
 		}
 	}
 
 	.p-anchorList {
 		text-align: center;
 		margin-top: 40px;
-
+		
 		> li {
 			display: inline-block;
 			margin: 0 1em;
 			font-size: 15px;
 		}
+
+		&__text {
+			text-decoration: none;
+			color: #333333;
+		}
+	}
+}
+
+.p-sectionTitle {
+	font-size: 20px;
+	letter-spacing: 1.2px;
+	font-weight: 200;
+	@include mq {
+		font-size: 30px;
+		letter-spacing: 1.4px;
+	}
+}
+
+.p-topMain {
+	margin: 100px 0 0;
+	background: #66b9bf;
+	color: #fff;
+	@include mq(small) {
+		padding: 40px 20px;
+	}
+	@include mq {
+		margin: 200px auto 100px;
+		width: 1100px;
 	}
 
 	.p-profile {
-		padding: 50px 100px;
-		margin-top: 100px;
-
+		color: #fff;
+		@include mq {
+			padding: 50px 100px;
+		}
+		
 		&__content {
-			margin-top: 45px;
-			padding: 0 10px;
+			margin: 15px 0;
+			@include mq {
+				margin: 45px 0 0;
+				padding: 0 10px;
+			}
 
 			> dl {
-				display: flex;
-				flex-wrap: wrap;
+				font-size: 13px;
+				line-height: 1.7;
+				@include mq {
+					display: flex;
+					flex-wrap: wrap;
+					font-size: 14px;
+				}
 			}
 
 			dd, dt {
-				display: inline-block;
+				@include mq {
+					display: inline-block;
+				}
 			}
 
 			dt {
-				font-size: 14px;
-				line-height: 1.7;
-				width: 20%;
+				&:nth-of-type(n+2) {
+					margin-top: 15px;
+				}
+				@include mq {
+					width: 20%;
+				}
 			}
 
 			dd {
-				font-size: 14px;
-				line-height: 1.7;
-				width: 80%;
-				padding-bottom: 15px;
+				@include mq {
+					width: 80%;
+					padding-bottom: 15px;
+				}
 			}
 		}
 
 	}
 
 	.p-works {
-		padding: 50px 100px;
+		margin-top: 40px;
+		color: #fff;
+		@include mq {
+			padding: 50px 100px;
+		}
 
 		&__list {
-			margin-top: 45px;
-			padding: 0 10px;
 			list-style: none;
-			display: flex;
+			margin: 15px 0;
+			
+			@include mq {
+				display: flex;
+				margin: 45px 0 0;
+				padding: 0 10px;
+			}
 			
 			> li {
-				width: calc(50% - 25px);
-				margin: 0 auto;
+				@include mq(small) {
+					text-align: center;
+				}
+				@include mq {
+					width: calc(50% - 25px);
+					margin: 0 auto;
+				}
 				&:first-child {
-					margin-right: 50px;
+					@include mq {
+						margin-right: 50px;
+					}
+				}
+				&:nth-child(n+2) {
+					@include mq(small) {
+						margin-top: 30px;
+					}
 				}
 			}
 
@@ -87,27 +164,69 @@ body {
 				display: block;
 				width: 100%;
 			}
-
-			img {
-				border: 1px solid #e0e0e0;
-			}
 		}
 
 		&__text {
 			margin-top: 10px;
-			font-size: 14px;
+			font-size: 13px;
 			line-height: 1.7;
 			font-weight: 200;
+			@include mq {
+				font-size: 14px;
+			}
 		}
 	}
 
 	.p-skills {
-		padding: 50px 100px;
-	
+		margin-top: 40px;
+		color: #fff;
+		@include mq {
+			padding: 50px 100px;
+		}
+		
 		> p {
-			margin-top: 45px;
-			font-size: 14px;
+			margin: 15px 0;
+			font-size: 13px;
 			line-height: 1.7;
+			@include mq {
+				font-size: 14px;
+				margin-top: 45px 0 0;
+			}
+		}
+	}
+}
+
+.p-footer {
+	background-color: #F7F7F7;
+	height: 80px;
+	@include mq {
+		height: 150px;
+	}
+
+	&__content {
+		text-align: center;
+		padding-top: 20px;
+		@include mq {
+			padding-top: 35px;
+		}
+
+		> p {
+			font-size: 18px;
+			letter-spacing: 0.1em;
+			@include mq {
+				font-size: 24px;
+			}
+		}
+
+		> small {
+			display: inline-block;
+			margin-top: 10px;
+			font-size: 8px;
+			letter-spacing: 0.1em;
+			@include mq {
+				font-size: 10px;
+				margin-top: 30px;
+			}
 		}
 	}
 }
