--- a/dev/web/asset/css/top/index.css
+++ b/dev/web/asset/css/top/index.css
@@ -154,8 +154,30 @@ body {
       margin: 0 1em;
       font-size: 15px; }
     .p-header .p-anchorList__text {
+      position: relative;
       text-decoration: none;
       color: #333333; }
+      @media screen and (min-width: 1024px) {
+        .p-header .p-anchorList__text:after {
+          content: '';
+          display: inline-block;
+          width: 100%;
+          height: 2px;
+          background-color: #333333;
+          position: absolute;
+          bottom: -7px;
+          left: 0;
+          -webkit-transform: scale(0, 1);
+          transform: scale(0, 1);
+          -webkit-transform-origin: left top;
+          transform-origin: left top;
+          -webkit-transition: -webkit-transform .2s;
+          transition: -webkit-transform .2s;
+          transition: transform .2s;
+          transition: transform .2s, -webkit-transform .2s; }
+        .p-header .p-anchorList__text:hover:after {
+          -webkit-transform: scale(1, 1);
+          transform: scale(1, 1); } }
 
 /* ---------------
     main
