--- a/dev/web/src/sass/object/project/top/_style.scss
+++ b/dev/web/src/sass/object/project/top/_style.scss
@@ -56,8 +56,27 @@ body {
 		}
 
 		&__text {
+			position: relative;
 			text-decoration: none;
 			color: #333333;
+			@include mq {
+				&:after {
+					content: '';
+					display: inline-block;
+					width: 100%;
+					height: 2px;
+					background-color: #333333;
+					position: absolute;
+					bottom: -7px;
+					left: 0;
+					transform: scale(0, 1);
+					transform-origin: left top;
+					transition: transform .2s;
+				}
+				&:hover:after {
+					transform: scale(1,1);
+				}
+			}
 		}
 	}
 }
