--- a/dev/web/src/sass/object/project/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/object/project/hidari-kikino-eren/_style.scss
@@ -1,3 +1,29 @@
+body {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	font-family: YakuHanJP,Noto Sans JP,sans-serif;
+	font-weight: 500;
+	line-height: 1;
+	background-color: #e50013;
+	-webkit-font-smoothing: antialiased; //フォント アンチエイリアス調整
+	text-rendering: optimizeLegibility; //レンダリング時のテキスト最適化方法
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 300;
+}
+
+button {
+	outline: none;
+	padding: 0;
+	border: none;
+}
+
+ol {
+	list-style: none;
+}
+
 .hidarikikinoEren{
 	position: relative;
 
