--- a/dev/src/styles/base/_breakpoint.scss
+++ b/dev/src/styles/base/_breakpoint.scss
@@ -3,8 +3,8 @@ $breakpoints: (
   'sm': 'screen and (max-width: 599px)',
   'md': 'screen and (min-width: 600px) and (max-width: 1023px)',
   'lg': 'screen and (min-width: 1024px)',
-  'gt-md': 'screen and (min-width: 600px)',
-  'lt-lg': 'screen and (max-width: 1023px)'
+  'gt-md': 'screen and (min-width: 600px)',  /* greater than md */
+  'lt-lg': 'screen and (max-width: 1023px)'  /* less than lg */
 );
 
 @mixin mq($breakpoint: lg) {
