--- a/dev/src/styles/base/_fonts.scss
+++ b/dev/src/styles/base/_fonts.scss
@@ -4,6 +4,6 @@ $font-families: (
   'lato_noto': "'Lato', 'Noto Sans JP','ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;"
 );
 
-@mixin font_family($font_family: normal) {
+@mixin font_family($font_family: lato_noto) {
   font-family: #{map-get($font-families, $font-family)};
 };
