--- a/dev03/src/styles/base/_breakpoint.scss
+++ b/dev03/src/styles/base/_breakpoint.scss
@@ -4,7 +4,13 @@ $breakpoints: (
   'md': 'screen and (min-width: 600px) and (max-width: 1023px)',
   'lg': 'screen and (min-width: 1024px)',
   'gt-md': 'screen and (min-width: 600px)',  /* greater than md */
-  'lt-lg': 'screen and (max-width: 1023px)'  /* less than lg */
+  'lt-lg': 'screen and (max-width: 1023px)',  /* less than lg */
+  /* kadel */
+  'kadel-sm': 'screen and (max-width: 768px)',
+  'kadel-md': 'screen and (min-width: 769px) and (max-width: 1024px)',
+  'kadel-lg': 'screen and (min-width: 1025px)',
+  'kadel-gt-md': 'screen and (min-width: 769px)',
+  'kadel-lt-lg':'screen and (max-width: 1024px)'
 );
 
 @mixin mq($breakpoint: lg) {
