--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,7 +1,10 @@
 // 共通のカラーテーマ 
-$main: #eff0f3; // background
-$secondary: #fffffe;
-$headLine: #0d0d0d; // buttonText
-$paragraph: #2a2a2a;
-$highLight: #ff8e3c; // button
-$tertiary: #d9376e;
+$background: #fef6e4;  // background
+$main: #f3d2c1; // background
+$secondary: #8bd3dd;
+$headLine: #001858; // buttonText
+$paragraph: #172c66;
+$highLight: #fef6e4; // button
+$tertiary: #f582ae;
+
+// from https://www.happyhues.co/palettes/17
