--- a/src/styles/base/_breakpoint.scss
+++ b/src/styles/base/_breakpoint.scss
@@ -5,7 +5,7 @@ $breakpoints: (
   'lg': 'screen and (min-width: 1024px)',
   'gt-md': 'screen and (min-width: 600px)',  /* greater than md */
   'lt-lg': 'screen and (max-width: 1023px)',  /* less than lg */
-  /* airTravel */
+  /* AirTravel */
   'air-sm': 'screen and (max-width: 768px)',
   'air-md': 'screen and (min-width: 769px) and (max-width: 1024px)',
   'air-lg': 'screen and (min-width: 1025px)',
