--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -5,7 +5,7 @@ button {
   line-height: 1.5;
   position: relative;
   display: inline-block;
-  padding: 0.6em 3.5em;
+  padding: 0.6em 3.9em;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -19,7 +19,8 @@ button {
   letter-spacing: 0.3em;
   color: #212529;
   border-radius: 0.5rem;
-  @include mq {
+  @include mq(gt-md) {
+    padding: 0.8em 5.2em;
     font-size: 16px;
   }
 
@@ -40,6 +41,9 @@ button {
       -webkit-transform: rotate(45deg) translateX(0) translateY(0);
       transform: rotate(45deg) translateX(0) translateY(0);
       background: #fff100;
+      @include mq(gt-md) {
+        left: calc(-133% + 50px);
+      }
     }
     &:after {
       position: absolute;
@@ -53,6 +57,9 @@ button {
       -webkit-transform: rotate(45deg) translateX(0) translateY(0);
       transform: rotate(45deg) translateX(0) translateY(0);
       background: #fff100;
+      @include mq(gt-md) {
+        right: calc(-133% + 50px);
+      }
     }
     &:hover {
       &:before {
@@ -89,5 +96,37 @@ button {
       color: #000;
       background: #fff;
     }
+  }
+}
+
+.buttonCTA-round {
+  display: inline-block;
+  text-decoration: none;
+  background: #ff8181;
+  color: #FFF;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  font-size: 14px;
+  border-radius: 50%;
+  text-align: center;
+  font-weight: bold;
+  overflow: hidden;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #bd6565;
+  transition: .4s;
+  cursor: pointer;
+  @include mq(gt-md) {
+    font-size: 16px;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+  }
+  
+  &:active {
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
+    border-bottom: none;
   }
 }
